--- a/styles/variables.css
+++ b/styles/variables.css
@@ -6,8 +6,8 @@
   --line-height: 23.4px;
   --background-image: url(../images/cover-image-dark.png);
   --accent-color: #FF0070;
-  --h1-color: #DB00FF;
-  --h2-color: #FF0070;
+  --hero-color: #DB00FF;
+  --heading-color: #FF0070;
   --bg-color: #000028;
   --text-color: #F1B2CE;
   --title-color: #000028;
